# docs/swagger.yaml
@@ -21,6 +21,13 @@ definitions:
       room_type:
         type: string
     type: object
+  hotel-booking-app_internal_handler_dto.CreatePaymentDTO:
+    properties:
+      amount:
+        type: number
+    required:
+    - amount
+    type: object
   hotel-booking-app_internal_handler_dto.CreateReservationDTO:
     properties:
       check_in_date:
@@ -47,6 +54,24 @@ definitions:
       name:
         type: string
     type: object
+  hotel-booking-app_internal_handler_dto.IsActiveDTO:
+    properties:
+      is_active:
+        type: boolean
+    type: object
+  hotel-booking-app_internal_handler_dto.PaymentDTO:
+    properties:
+      amount:
+        type: number
+      id:
+        type: string
+      payment_time:
+        type: string
+      reservation_id:
+        type: string
+      user_id:
+        type: string
+    type: object
   hotel-booking-app_internal_handler_dto.ReservationDTO:
     properties:
       check_in_date:
@@ -67,6 +92,13 @@ definitions:
   hotel-booking-app_internal_handler_dto.ReturnIdDTO:
     properties:
       id:
+        type: string
+    type: object
+  hotel-booking-app_internal_handler_dto.RoleDTO:
+    properties:
+      id:
+        type: string
+      name:
         type: string
     type: object
   hotel-booking-app_internal_handler_dto.RoomDTO:
@@ -133,6 +165,13 @@ definitions:
       status:
         type: string
     type: object
+  hotel-booking-app_internal_handler_dto.UpdateRoleDTO:
+    properties:
+      role:
+        type: string
+    required:
+    - role
+    type: object
   hotel-booking-app_internal_handler_dto.UpdateRoomDTO:
     properties:
       max_occupancy:
@@ -141,6 +180,19 @@ definitions:
         type: number
       room_type:
         type: string
+    type: object
+  hotel-booking-app_internal_handler_dto.UserDTO:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      is_active:
+        type: boolean
+      name:
+        type: string
+      role:
+        $ref: '#/definitions/hotel-booking-app_internal_handler_dto.RoleDTO'
     type: object
 host: localhost:8000
 info:
@@ -361,6 +413,35 @@ paths:
       summary: Get all hotels
       tags:
       - Hotel
+  /payment/all:
+    get:
+      consumes:
+      - application/json
+      description: Returns a list of payments made by the authenticated user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/hotel-booking-app_internal_handler_dto.PaymentDTO'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+      summary: Get user payments
+      tags:
+      - Payment
   /reservation/:id/cancel:
     get:
       consumes:
@@ -423,6 +504,47 @@ paths:
       summary: Update the status of a reservation
       tags:
       - Reservation
+  /reservation/{id}/pay:
+    post:
+      consumes:
+      - application/json
+      description: Pay for a reservation with the specified payment details.
+      parameters:
+      - description: Reservation ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Payment details
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/hotel-booking-app_internal_handler_dto.CreatePaymentDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ReturnIdDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+      security:
+      - ApiKeyAuth: []
+      summary: Pay for reservation
+      tags:
+      - Payment
   /reservation/all:
     get:
       consumes:
@@ -613,6 +735,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
         "500":
           description: Internal Server Error
           schema:
@@ -647,4 +773,93 @@ paths:
       summary: Sign up into account
       tags:
       - Authentication
+  /user/:id/active:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User active status data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/hotel-booking-app_internal_handler_dto.IsActiveDTO'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.SuccessDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+      summary: Change user active status
+      tags:
+      - User
+  /user/:id/role:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User role data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/hotel-booking-app_internal_handler_dto.UpdateRoleDTO'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.SuccessDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+      summary: Change user active status
+      tags:
+      - User
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Returns a list of all users.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/hotel-booking-app_internal_handler_dto.UserDTO'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/hotel-booking-app_internal_handler_dto.ErrorDTO'
+      summary: Get users list (for admin)
+      tags:
+      - Admin
 swagger: "2.0"
